# USM-to-be-continued--FE

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/handlers/: mod.rs  rest_api.rs
backend/src/models/: mod.rs  table_models.rs
backend/src/services/: mod.rs  server_connection_impl.rs
backend/src/utils/: mod.rs  password.rs
docs/: QUICK_START.md  SETUP.md
frontend/: README.md
frontend/src/: App.tsx
frontend/src/components/: AdminDashboard.tsx  AdminRegisterForm.tsx  Dashboard.tsx  LoginForm.tsx  RegisterForm.tsx  StudentDashboard.tsx  TeacherDashboard.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
