[package]
name = "university-management-system"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = "0.29"
argon2 = "0.5"
base64 = "0.21"

[[bin]]
name = "university-management-system"
path = "src/main.rs" 